# LBM_Saclay_Rech-Dev

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE.CECILL.EN.utf8  README.md  Readme.md  run_clang_format.sh
cmake/: show_build_time.sh  write_version.cmake
compilation/: pprint.sh  prepare_cmake.sh
compilation/orcus/: modules
compilation/topaze/: modules
doc/: CMakeLists.txt
doc/mkdocs/: mkdocs.yml.in
post-processing/: plot_vtk_imagedata.py
post-processing/double_poiseuille/: double_poiseuille_anim.py  double_poiseuille_anim_gif.py
run_training_lbm/Slurm-Orcus/: JOB_H100.slurm  JOB_H100_1MPI.slurm  JOB_H100_2MPI.slurm  JOB_H100_4MPI.slurm
run_training_lbm/TestCase01_LidDrivenCavityFlow/: Post-Pro_Lid_Driven_Cavity_Flow_Profile_Ux_y_Re1000.py  Readme_Cavity-Flow.txt  TestCase01_Lid_driven_cavity_flow_Re0100.ini  TestCase01_Lid_driven_cavity_flow_Re0400.ini  TestCase01_Lid_driven_cavity_flow_Re1000.ini
run_training_lbm/TestCase02_Poiseuille_Water/: Post-Pro_Poiseuille_Water_CompareAnaly.py  Pre-Pro_Poiseuille.py  Readme_Poiseuille.txt  TestCase02_Poiseuille_Water.ini  Validation-Sheet_Poiseuille_Similarity_Water.ipynb
run_training_lbm/TestCase03_Zalesak-Disk2D/: TestCase03_Zalesak-Disk_BGK.ini  TestCase03_Zalesak-Disk_MRT.ini  TestCase03_Zalesak-Disk_TRT.ini
run_training_lbm/TestCase04_Deformation-Vortex2D/: Readme_Compare_CAC-CH.txt  State_Compare_Isovalue_PV513.pvsm  TestCase04_Interface-Vortex_CAC.ini  TestCase04_Interface-Vortex_CH.ini
run_training_lbm/TestCase05_Spinodal-Decomposition2D/: State_Vid_SpinDecomp_PV511.pvsm  TestCase05_Spinodal-Decomposition_CH.ini
run_training_lbm/TestCase06_Stefan-Problem/: Post-Pro_Compare_Analytical-Solution.py  Readme_Stefan-Problem.txt  TestCase06_Stefan-Problem.ini
run_training_lbm/TestCase07_Double-Poiseuille/: Post-Pro_Compare_BGK-MRT.py  Post-Pro_Double-Poiseuille_BGK.py  Post-Pro_Double-Poiseuille_MRT.py  TestCase07_Double_Poiseuille_MRT.ini
run_training_lbm/TestCase08_Rayleigh-Taylor2D/: Post-Pro_Rayleigh-Taylor2D_CompareFakhari.py  Pre-Pro_InputParam_Rayleigh-Taylor.py  Readme_Rayleigh-Taylor.txt  State_Vid_Rayleigh-Taylor2D_PV513.pvsm  TestCase_Rayleigh-Taylor_Spike-Bubble.ini
run_training_lbm/TestCase09_Capillary-Wave2D/: Readme_Capillary-Wave.txt  State_Capillary-Wave_PV513.pvsm
run_training_lbm/TestCase10_Falling-Droplet2D/: State_Img_Rayleigh-Plateau_PV511.pvsm  (+1 more)
settings/AC/: circle.ini
src/: CMakeLists.txt  FieldManager.h  LBMParams.cpp  LBMParams.h  LBMRun.h  LBMRunBase.h  LBMRunFactory.cpp  LBMRunFactory.h  LBM_Base_Functor.cpp  LBM_Base_Functor.h  LBM_Lattice.h  LBM_enums.h  LBM_maps.h  LBM_saclay_version.h.in  countLines.sh  kokkos_shared.h  main.cpp  real_type.h  stdVectorUtils.h
src/bc_cond/: PeriodicBoundariesFunctor.h  PeriodicBoundariesManager.h  mpiBorderUtils.h
src/io/: IO_HDF5.cpp  IO_HDF5.h  IO_ReadWrite.cpp  IO_ReadWrite.h  io_common.cpp  io_common.h  io_csv.h  save_vtk.cpp  save_vtk.h
src/kernels/: Collision_operators.h  ConnectedComponentsLabellingFunctors.h  FunctorBoundary.h  FunctorCustom.h  FunctorInitMacro.h  FunctorMacro.h  FunctorScheme.h  Kernels.h  LBMSchemeBase.h  ProblemBase.h  ProblemFactory.h  ReducerMax.h  ReducerMin.h  ReducerSum.h  vector_types.h
src/kernels/AC/: Index_AC.h  InitConditionsTypes.h  LBMScheme_AC.h  Models_AC.h  Problem_AC.h  Setup.h
src/kernels/Advection-Diffusion/: Index_AD.h  InitConditionsTypes.h  LBMScheme_AD.h  Models_AD.h  Problem_AD.h  Setup.h
src/kernels/Crystal_growth_Younsi/: Index.h  InitConditionsTypes.h  LBMScheme.h  Models.h  Problem.h  Setup.h
src/kernels/GPMixt/: GPMixt_Index.h  InitConditionsTypes.h  LBMScheme_GPMixt.h  Models_GP_Mixt.h  Problem_GPMixt.h  Setup.h
src/kernels/GPMixtNS/: GPMixt_NS_Index.h  InitConditionsTypes.h  LBMScheme_GPMixt_NS.h  Models_GP_Mixt_NS.h  Problem_GPMixtNS.h  Setup.h
src/kernels/GPMixtTernary/: Index.h  InitConditionsTypes.h  LBMScheme_GPMixt_Ternary.h  Models_GP_Mixt_Ternary.cpp  Models_GP_Mixt_Ternary.h  Problem_GPMixtTernary.h  Setup.h
src/kernels/GPMuTernary/: GPMu_Ternary_Index.h  InitConditionsTypes.h  LBMScheme_GPMu_Ternary.h  Models_GP_Mu_Ternary.h  Problem_GPMuTernary.h  Setup.h
src/kernels/MPwSLphC/: Index_MPwSLphC.h  InitConditionsTypes.h  LBMScheme_MPwSLphC.h  Models_MPwSLphC.h  Problem_MPwSLphC.h  Setup.h
src/kernels/NS/: Index.h  InitConditionsTypes.h  Model.h  Problem.h  Scheme.h  Setup.h
src/kernels/NSAC_Comp/: Index_NS_AC_Comp.h  InitConditionsTypes.h  LBMScheme_NS_AC_Comp.h  Models_NS_AC_Comp.h  Problem_NS_AC_Comp.h  Setup.h
src/kernels/NSAC_Comp_3phases/: Index.h  InitConditionsTypes.h  Model.h  Problem.h  Scheme.h  Setup.h
src/kernels/NSAC_Comp_3phases3D/: Index_NS_2AC_Comp3D.h  InitConditionsTypes.h  LBMScheme_NS_2AC_Comp3D.h  Models_NS_2AC_Comp3D.h  Problem_NS_2AC_Comp3D.h  Setup.h
src/kernels/NSAC_Fakhari/: Index_NS_AC_Fakhari.h  InitConditionsTypes.h  LBMScheme_NS_AC_Fakhari.h  Models_NS_AC_Fakhari.h  Problem_NS_AC_Fakhari.h  Setup.h
src/kernels/NSAC_Surfactant/: Index_NS_Surfactant.h  InitConditionsTypes.h  LBMScheme_NS_Surfactant.h  Models_NS_Surfactant.h  Problem_NS_Surfactant.h  Setup.h
src/kernels/NSAC_coupling/: Index_NS_AC.h  InitConditionsTypes.h  LBMScheme_NS_AC.h  Models_NS_AC.h  ProblemNSAC.h  Setup.h
src/kernels/NS_3phases_1comp_phase_change/: Index_NS_2AC_Comp3D.h  InitConditionsTypes.h  LBMScheme_NS_2AC_Comp3D.h  Models_NS_2AC_Comp3D.h  Setup.h
src/utils/: CMakeLists.txt
src/utils/config/: CMakeLists.txt  ConfigMap.cpp  ConfigMap.h
src/utils/config/inih/: INIReader.cpp  INIReader.h  INIReaderTest.cpp  ini.cpp  ini.h
src/utils/monitoring/: CMakeLists.txt  CudaTimer.h  OpenMPTimer.cpp  OpenMPTimer.h  SimpleTimer.cpp  SimpleTimer.h
src/utils/mpiUtils/: CMakeLists.txt  ErrorPolling.cpp  ErrorPolling.h  GlobalMpiSession.cpp  GlobalMpiSession.h  MpiComm.cpp  MpiComm.h  MpiCommCart.cpp  MpiCommCart.h  TestForException.h  common_config.h  mpiEnums.h
src/utils/output_selector/: CMakeLists.txt  OutputSelector.cpp  OutputSelector.h  Selectors.cpp  Selectors.h
(+309 files in other folders)
